While virtual keyboard is visible on mobiles, disable pull to refresh & attempt to correct container height to improve scrolling behavior

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 	}
 	:root {
 		--btn-text-case: none;
-		@apply bg-base-200;
+		@apply bg-base-200 overscroll-none size-0;
 	}
 	body {
 		@apply overflow-hidden;
